@@ -21,10 +21,9 @@ requires:
   Cwd: '0'
   File::Copy: '0'
   File::Glob: '0'
-  File::Slurp: '0'
   File::Spec: '0'
   File::Temp: '0'
-  Path::Iter: '0'
+  Path::Tiny: '0'
   Test::Deep: '0'
   Test::Exception: '0'
   Test::File: '0'
